# qubrabench

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .pylintrc  DEVELOP.md  LICENSE  Makefile  README.md  batch_generation.sh  conftest.py  develop.html  genindex.html  hill-climber.py  hill_climber_benchmarking.py  hill_climber_problem_generator.py  hill_climber_solver.py  index.html  license.html  michael.py  modules.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  qubrabench.algorithms.html  qubrabench.datastructures.html  qubrabench.html  qubrabench.py  qubrabench.utils.html  requirements.txt  run_tests.sh  search.html  searchindex.js
.github/workflows/: ci.yaml  test.yaml
_sources/: modules.rst.txt  qubrabench.algorithms.rst.txt  qubrabench.datastructures.rst.txt  qubrabench.rst.txt  qubrabench.utils.rst.txt
algorithms/: hill_climber_kit.py  hill_climber_rub.py  hillclimber_kit.py  hillclimber_rub.py  maxsat.py
bench/: qsearch.py  stats.py
data/plot_reference/: hill_climb_cade_steep.json
docs/: DEVELOP.md  Makefile  requirements.txt
docs/source/: conf.py  develop.md  index.md  index.rst
examples/: Makefile  bench_nesting.py  matrix_search.py  nesting.py  profile_search.py  test_matrix_search.py  test_nesting.py
examples/and_or_trees/: and_or_trees.py  and_or_trees_test.py
examples/communities/: bench_louvain.py  graph_instances.py  louvain.py  qlouvain.py  test_graph_instances.py  test_louvain.py  test_qlouvain.py
examples/communitydetection/: graph_instances.py  louvain.py  test_graph_instances.py  test_louvain.py
examples/sat/: Makefile  README.md  bench_hillclimber.py  bench_maxsat.py  bench_schoening.py  bruteforce.py  hillclimber.ipynb  hillclimber.py  hillclimber_basic.ipynb  hillclimber_kit.py  hillclimber_outdated.ipynb  hillclimber_plotting_strategy.py  hillclimber_rub.py  maxsat.py  plotting_strategy.py  sat.py  schoening.py  schoening_variant.py  schoening_variants.py  schoning.py  test_bruteforce.py  test_hillclimber.py  test_sat.py  test_schoening.py  test_schoening_variant.py  test_schoening_variants.py  test_schoning.py  test_weightedsat.py  weightedsat.py
examples/simplex/: simplex.py  test_simplex.py
qubra_bench/algorithms/: hillclimber_kit.py  hillclimber_rub.py
qubra_bench/bench/: qsearch.py
qubrabench/: __init__.py  _internals.py  benchmark.py  stats.py
qubrabench/algorithms/: __init__.py  amplitude.py  linalg.py  linsolve.py  max.py  search.py  statepreparation.py
qubrabench/algorithms/Grover_Rudolph/: README.md  gr_functions.py  gr_test.py
qubrabench/algorithms/state_preparation/: README.md
qubrabench/bench/: bounds.py  qsearch.py  stats.py
qubrabench/datastructures/: __init__.py  blockencoding.py  list.py  matrix.py  qlist.py  qndarray.py
qubrabench/examples/: bench_maxsat.py  hillclimber_kit.py  hillclimber_rub.py  maxsat.py  sat.py
qubrabench/util/: plotting.py  profile_decoration.py
qubrabench/utils/: __init__.py  plotting.py  plotting_strategy.py
test/: test_data_validity.py
tests/: benchmark.py  test_benchmark.py  test_data_validity.py  test_internals.py  test_sat.py
tests/algorithms/: test_amplitude.py  test_linalg.py  test_max.py  test_search.py  test_statepreparation.py
tests/datastructures/: test_list.py  test_matrix.py  test_qndarray.py
tests/examples/: test_hillclimber.py  test_sat.py
util/: plotting.py  profile_decoration.py
util/reference_data/: hill_climb_cade_ref.json
