[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "qubrabench"
authors = [
  { name="Tim Bittner", email="tim.bittner@kit.edu" },
  { name="Luke Southall", email="luke.southall@student.kit.edu" },
  { name="Michael Walter", email="michael.walter@rub.de" },
]
description = "QuBRA Benchmarking Framework"
readme = "README.md"
requires-python = ">=3.10"
# license = ???
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click~=8.1",
    "pandas~=2.0",
    "matplotlib~=3.7",
    "numpy~=1.24",
    "scipy~=1.10",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/KIT-TVA/qubra-bench"
"Bug Tracker" = "https://github.com/KIT-TVA/qubra-bench/issues"

# [project.scripts]
# my-script = "my_package.module:function"

[project.optional-dependencies]
dev = [
    "pytest~=7.3",
    "black",
]

[tool.setuptools.dynamic]
version = {attr = "qubrabench.__version__"}

[tool.setuptools.packages.find]
include = ["qubrabench"]

[tool.pytest.ini_options]
markers = [
    "kit: test KIT implementations (in case of parallel implementations)",
    "rub: test RUB implementations (in case of parallel implementations)",
]
