[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "qubrabench"
authors = [
    { name = "Tim Bittner", email = "tim.bittner@kit.edu" },
    { name = "Luke Southall", email = "luke.southall@student.kit.edu" },
    { name = "Michael Walter", email = "michael.walter@rub.de" },
    { name = "Luca Witt", email = "luca.witt@rub.de" },
    { name = "Anurudh Peduri", email = "anurudh.peduri@rub.de" },
]
description = "QuBRA Benchmarking Framework"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "click~=8.1",
    "pandas~=2.0",
    "matplotlib~=3.7",
    "numpy~=1.24",
    "scipy~=1.10",
    "networkx~=3.1",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/qubrabench/qubrabench"
"Bug Tracker" = "https://github.com/qubrabench/qubrabench/issues"

# [project.scripts]
# my-script = "my_package.module:function"

[project.optional-dependencies]
dev = [
    "black",
    "pytest~=7.3",
    "mypy~=1.2",
    "pandas-stubs~=2.0",
    "networkx-stubs~=0.0",
    "ruff~=0.0",
]

[tool.setuptools.dynamic]
version = { attr = "qubrabench.__version__" }

[tool.setuptools.packages.find]
include = ["qubrabench"]

[tool.pytest.ini_options]
markers = []

[tool.ruff]
line-length = 100000 # 88 enforced by black, ignore for comments.

[tool.mypy]
plugins = ["numpy.typing.mypy_plugin"]

[tool.pyright]
include = ["qubrabench", "tests", "tests", "examples"]
reportMissingImports = true
reportMissingTypeStubs = true
pythonVersion = "3.10"
