[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "qubrabench"
authors = [
    { name = "Tim Bittner", email = "tim.bittner@kit.edu" },
    { name = "Luke Southall", email = "luke.southall@student.kit.edu" },
    { name = "Michael Walter", email = "michael.walter@rub.de" },
    { name = "Luca Witt", email = "luca.witt@rub.de" },
    { name = "Anurudh Peduri", email = "anurudh.peduri@rub.de" },
]
description = "QuBRA Benchmarking Framework"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "click~=8.1",
    "pandas~=2.0",
    "matplotlib~=3.7",
    "numpy~=1.24",
    "scipy~=1.10",
    "networkx>=2.8.8",
    "methodtools~=0.4",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/qubrabench/qubrabench"
"Bug Tracker" = "https://github.com/qubrabench/qubrabench/issues"

[project.optional-dependencies]
dev = [
    "black[jupyter]~=24.0",
    "isort>=5.12",
    "ruff~=0.3",
    "pytest~=7.3",
    "mypy~=1.2",
    "pandas-stubs~=2.0",
    "networkx-stubs~=0.0",
    "sphinx~=7.0.1",
    "sphinxcontrib-napoleon~=0.7",
    "myst-parser~=2.0",
    "jupyter~=1.0",
    "jupyter-black~=0.3.4",
    "nbdev~=2.3.12",
    "pre-commit~=3.3.3",
    "methodtools~=0.4.7"
]

[tool.setuptools.dynamic]
version = { attr = "qubrabench.__version__" }

[tool.setuptools.packages.find]
include = ["qubrabench"]

[tool.pytest.ini_options]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
testpaths = "qubrabench tests examples"
xfail_strict=true

[tool.ruff]
lint.ignore = ["E501"] # Never enforce `E501` (line length violations). Length = 88 auto-checked by black.

[tool.mypy]
plugins = ["numpy.typing.mypy_plugin"]

[tool.pyright]
include = ["qubrabench", "tests", "tests", "examples"]
reportMissingImports = true
reportMissingTypeStubs = true
pythonVersion = "3.10"

[tool.isort]
profile = "black"
